--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="">
         <div class="container mx-auto flex flex-col px-5 md:px-2 md:py-24 md: justify-center items-center">
-          <img class="lg:w-full md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="images\fe222d8788419f353b1a413cb98b1a29 1.png">
+          <img class="md:w-full md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="images\fe222d8788419f353b1a413cb98b1a29 1.png">
           
         </div>
       </section>
